--- a/frontend/src/main/webapp/tela_cadastro_usuario.html
+++ b/frontend/src/main/webapp/tela_cadastro_usuario.html
@@ -1,151 +1,185 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <title>Cadastro de Usuário</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <style>
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
 
-<head>
-  <meta charset="utf-8" />
-  <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <title>Cadastro de Usuário</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
-  <style>
-    html,
-    body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
+      body {
+        background-color: #f8f9fa;
+      }
 
-    body {
-      background-color: #f8f9fa;
-    }
+      .container {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
 
-    .container {
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+      .card {
+        width: 100%;
+        max-width: 420px;
+        padding: 1.5rem;
+      }
 
-    .card {
-      width: 100%;
-      max-width: 420px;
-      padding: 1.5rem;
-    }
+      h4 {
+        font-size: 1rem;
+        margin-bottom: 1rem;
+      }
 
-    h4 {
-      font-size: 1.0rem;
-      margin-bottom: 1rem;
-    }
+      label.form-label {
+        font-size: 0.9rem;
+      }
 
-    label.form-label {
-      font-size: 0.9rem;
-    }
+      .error-message {
+        color: red;
+        font-size: 0.8rem;
+        display: none;
+      }
 
-    .error-message {
-      color: red;
-      font-size: 0.8rem;
-      display: none;
-    }
+      .input-error {
+        border-color: red !important;
+      }
 
-    .input-error {
-      border-color: red !important;
-    }
+      #mensagemSistema {
+        font-size: 0.875rem;
+        min-height: 1.5rem;
+        transition: opacity 0.2s ease-in-out;
 
-    #mensagemSistema {
-      font-size: 0.875rem;
-      min-height: 1.5rem;
-      transition: opacity 0.2s ease-in-out;
+        /* ou ajuste visual desejado, ex: 24px */
+      }
 
-      /* ou ajuste visual desejado, ex: 24px */
+      #mensagemSistema.alert {
+        padding: 0.25rem 0.75rem;
+        /* vertical 4px, horizontal 12px */
+        font-size: 0.8rem;
+        border-radius: 0.25rem;
+        /* reduz arredondamento */
+      }
 
-    }
+      .text-success {
+        font-size: 0.85rem;
+      }
+    </style>
+  </head>
 
-    #mensagemSistema.alert {
-      padding: 0.25rem 0.75rem;
-      /* vertical 4px, horizontal 12px */
-      font-size: 0.8rem;
-      border-radius: 0.25rem;
-      /* reduz arredondamento */
-
-    }
-
-    .text-success {
-      font-size: 0.85rem;
-    }
-  </style>
-</head>
-
-<body>
-  <div class="container">
-    <div class="card shadow-sm text-center">
-      <div class="bg-secondary text-white py-2 px-3 rounded mb-3">
-        <h4 class="m-0">CADASTRO DE USUÁRIO</h4>
-      </div>
-      <form id="cadastroForm">
-        <div class="mb-2 text-start">
-          <label class="form-label" for="nome"><i class="fas fa-user me-2"></i>Nome Completo</label>
-          <input class="form-control" id="nome" placeholder="Digite seu nome completo" required type="text" />
+  <body>
+    <div class="container">
+      <div class="card shadow-sm text-center">
+        <div class="bg-secondary text-white py-2 px-3 rounded mb-3">
+          <h4 class="m-0">CADASTRO DE USUÁRIO</h4>
         </div>
-
-        <div class="mb-2 text-start">
-          <label class="form-label" for="email"><i class="fas fa-envelope me-2"></i>E-mail</label>
-          <input class="form-control" id="email" placeholder="Digite seu e-mail" required type="email" />
-          <div class="error-message" id="emailInvalidError">
-            Formato de e-mail inválido.
+        <form id="cadastroForm">
+          <div class="mb-2 text-start">
+            <label class="form-label" for="nome"
+              ><i class="fas fa-user me-2"></i>Nome Completo</label
+            >
+            <input
+              class="form-control"
+              id="nome"
+              placeholder="Digite seu nome completo"
+              required
+              type="text"
+            />
           </div>
-          <div class="error-message" id="emailUsedError">
-            E-mail já cadastrado.
+
+          <div class="mb-2 text-start">
+            <label class="form-label" for="email"
+              ><i class="fas fa-envelope me-2"></i>E-mail</label
+            >
+            <input
+              class="form-control"
+              id="email"
+              placeholder="Digite seu e-mail"
+              required
+              type="email"
+            />
+            <div class="error-message" id="emailInvalidError">
+              Formato de e-mail inválido.
+            </div>
+            <div class="error-message" id="emailUsedError">
+              E-mail já cadastrado.
+            </div>
           </div>
-        </div>
 
-        <div class="mb-2 text-start">
-          <label class="form-label" for="perfil"><i class="fas fa-id-badge me-2"></i>Perfil</label>
-          <select class="form-select" id="perfil" required>
-            <option value="" disabled selected>Selecione um perfil</option>
-            <option value="ADMIN">Administrador</option>
-            <option value="LABORATORIO">Laboratório</option>
-            <option value="ENGENHARIA">Engenharia</option>
-            <option value="ENG_LAB">Engenharia & Laboratório</option>
-            <option value="USUARIO">Usuário</option>
-          </select>
-        </div>
-
-        <div class="mb-2 text-start">
-          <label class="form-label" for="senha"><i class="fas fa-lock me-2"></i>Senha</label>
-          <input class="form-control" id="senha" placeholder="Digite sua senha" required type="password" />
-        </div>
-
-        <div class="mb-2 text-start">
-          <label class="form-label" for="confirmarSenha"><i class="fas fa-lock me-2"></i>Confirmação de Senha</label>
-          <input class="form-control" id="confirmarSenha" placeholder="Confirme sua senha" required type="password" />
-          <div class="error-message" id="senhaError">
-            As senhas não coincidem.
+          <div class="mb-2 text-start">
+            <label class="form-label" for="perfil"
+              ><i class="fas fa-id-badge me-2"></i>Perfil</label
+            >
+            <select class="form-select" id="perfil" required>
+              <option value="" disabled selected>Selecione um perfil</option>
+              <option value="ADMIN">Administrador</option>
+              <option value="LABORATORIO">Laboratório</option>
+              <option value="ENGENHARIA">Engenharia</option>
+              <option value="ENG_LAB">Engenharia & Laboratório</option>
+              <option value="USUARIO">Usuário</option>
+            </select>
           </div>
-        </div>
 
-        <button class="btn btn-primary w-100 mb-2" type="submit">
-          <i class="fas fa-user-plus me-2"></i>Criar Conta
-        </button>
-        <!--
+          <div class="mb-2 text-start">
+            <label class="form-label" for="senha"
+              ><i class="fas fa-lock me-2"></i>Senha</label
+            >
+            <input
+              class="form-control"
+              id="senha"
+              placeholder="Digite sua senha"
+              required
+              type="password"
+            />
+          </div>
+
+          <div class="mb-2 text-start">
+            <label class="form-label" for="confirmarSenha"
+              ><i class="fas fa-lock me-2"></i>Confirmação de Senha</label
+            >
+            <input
+              class="form-control"
+              id="confirmarSenha"
+              placeholder="Confirme sua senha"
+              required
+              type="password"
+            />
+            <div class="error-message" id="senhaError">
+              As senhas não coincidem.
+            </div>
+          </div>
+
+          <button class="btn btn-primary w-100 mb-2" type="submit">
+            <i class="fas fa-user-plus me-2"></i>Criar Conta
+          </button>
+          <!--
         <div id="mensagemSistema" class="alert d-none mt-3" role="alert"></div>        
         -->
 
-        <div id="mensagemSistema" class="alert  mt-1 mb-2 invisible" role="alert"></div>
+          <div
+            id="mensagemSistema"
+            class="alert mt-1 mb-2 invisible"
+            role="alert"
+          ></div>
 
-        <div class="text-center mt-3">
-          <a class="text-decoration-none text-success" href="index.html">
-            <i class="fas fa-arrow-left me-2"></i>Voltar ao Menu Principal
-          </a>
-        </div>
-      </form>
+          <div class="text-center mt-3">
+            <a class="text-decoration-none text-success" href="index.html">
+              <i class="fas fa-arrow-left me-2"></i>Voltar ao Menu Principal
+            </a>
+          </div>
+        </form>
+      </div>
     </div>
-  </div>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      FiberGuardian.TelaCadastroUsuario.init();
-    });
-  </script>
-</body>
-
+  </body>
 </html>
